--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,144 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-.header {
-  background-color: red;
-  width: 100%;
-  height: max-content;
-  justify-content: end;
+body {
+  font-family: "Roboto", sans-serif;
 }
+
 nav {
   width: 100%;
-  height: 100%;
-  justify-content: end;
+  height: fit-content;
+  display: block;
+  position: fixed;
+  box-shadow: 0px 5px 10px rgba(89, 89, 89, 0.2);
 }
 .nav {
-  background-color: rgb(53, 53, 53);
-  width: 100%;
+  background-color: #16122d;
+  width: auto;
   height: max-content;
   display: flex;
   justify-content: space-between;
@@ -28,6 +149,13 @@ nav {
 .logo {
   display: inline-flex;
   color: white;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.logo h1 {
+  font-weight: bold;
 }
 
 .logo-img {
@@ -36,12 +164,16 @@ nav {
 }
 
 ul {
-  justify-content: end;
+  justify-content: center;
 }
 
 a {
   text-decoration: none;
-  color: white;
+  color: inherit;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
 }
 
 .menu {
@@ -52,35 +184,105 @@ a {
   border: 2rem;
   border-color: white;
   margin: 0px 10px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 
 button {
-  padding: 5px 10px;
-  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  color: white;
+  background-color: #582df4;
   border: none;
-  transition: 0.5s;
+  transition: 0.2s;
   border-radius: 5px;
+  display: inline-flex;
 }
 
 button:hover {
-  background-color: #32323200;
+  box-shadow: inset 1px 1px 5px #01368a;
+  background-color: #ffffff00;
+  /* border: 1px solid; */
+  /* border-color: #ffffff; */
   color: whitesmoke;
 }
 
-button a {
-  color: black;
-}
 button a:hover {
   color: whitesmoke;
 }
 
-.main {
-  background-color: green;
-  width: max-content;
-  height: 100px;
+main {
+  background-color: rgb(2, 2, 62);
+  width: auto;
+  height: auto;
 }
-.article {
-  background-color: blue;
-  width: max-content;
-  height: 100px;
+section {
+  height: 100vh;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.profile {
+  margin-right: 150px;
+  width: auto;
+  height: auto;
+}
+
+.intro-profile {
+  color: rgb(209, 209, 209);
+  align-items: left;
+}
+
+.intro-profile p {
+  font-size: 32px;
+  margin-bottom: 12px;
+}
+
+.intro-profile h1 {
+  font-size: 60px;
+  font-weight: bolder;
+  color: #9b4fe3;
+  margin: 12px 0px;
+}
+
+.intro-profile h3 {
+  font-size: 48px;
+}
+
+.img-profile {
+  width: 400px;
+  height: 400px;
+  overflow: hidden;
+  background-color: #01368a;
+  border-radius: 50%;
+}
+
+.img-profile img {
+  justify-content: end;
+}
+
+.intro-btn {
+  margin-top: 20px;
+  background-color: #ffffff00;
+  border: 2px solid;
+  font-size: 20px;
+}
+
+.intro-btn:hover {
+  background-color: #582df4;
+  border: 2px solid #582df4;
+  color: white;
+  box-shadow: inset 2px 2px 10px black;
 }
