--- a/style/style.css
+++ b/style/style.css
@@ -134,10 +134,11 @@ nav {
   height: fit-content;
   display: block;
   position: fixed;
-  box-shadow: 0px 5px 10px rgba(89, 89, 89, 0.2);
+  /* box-shadow: 0px 0px 25px #e8e8e882; */
 }
 .nav {
-  background-color: #16122d;
+  background: linear-gradient(to right, #665c5c31, #5a5a5a79);
+  /* background-color: #16122d; */
   width: auto;
   height: max-content;
   display: flex;
@@ -193,7 +194,7 @@ button {
   width: fit-content;
   height: fit-content;
   color: white;
-  background-color: #582df4;
+  background-color: #170516;
   border: none;
   transition: 0.2s;
   border-radius: 5px;
@@ -201,7 +202,7 @@ button {
 }
 
 button:hover {
-  box-shadow: inset 1px 1px 5px #01368a;
+  box-shadow: 0px 0px 25px #170516;
   background-color: #ffffff00;
   /* border: 1px solid; */
   /* border-color: #ffffff; */
@@ -213,12 +214,18 @@ button a:hover {
 }
 
 main {
-  background-color: rgb(2, 2, 62);
+  background: linear-gradient(
+    to top right,
+    #170516 30%,
+    #6e0160 70%,
+    #ff0072 100%
+  );
   width: auto;
   height: auto;
 }
 section {
   height: 100vh;
+  margin: 0px 12px;
 }
 
 .container {
@@ -226,6 +233,8 @@ section {
   align-items: center;
   justify-content: center;
   width: 100%;
+  margin: 100px 20px 20px 20px;
+  border-radius: 20px;
 }
 
 .hero {
@@ -235,7 +244,7 @@ section {
 }
 
 .profile {
-  margin-right: 150px;
+  margin: 5px 50px 5px 50px;
   width: auto;
   height: auto;
 }
@@ -248,13 +257,16 @@ section {
 .intro-profile p {
   font-size: 32px;
   margin-bottom: 12px;
+  position: relative;
+  z-index: 1;
 }
 
 .intro-profile h1 {
   font-size: 60px;
   font-weight: bolder;
-  color: #9b4fe3;
+  color: white;
   margin: 12px 0px;
+  text-shadow: 0px 0px 25px #b30051;
 }
 
 .intro-profile h3 {
@@ -262,16 +274,20 @@ section {
 }
 
 .img-profile {
-  width: 400px;
+  width: 360px;
   height: 400px;
   overflow: hidden;
-  background-color: #01368a;
-  border-radius: 50%;
+  /* background-color: #01368a; */
+  border: 6px solid;
+  border-color: #ff0072;
+  border-radius: 5%;
+  box-shadow: inset 0px 0px 50px #ff0072;
+  margin: 50px 50px;
 }
 
-.img-profile img {
-  justify-content: end;
-}
+/* .img-profile img {
+  justify-content: center;
+} */
 
 .intro-btn {
   margin-top: 20px;
@@ -281,8 +297,8 @@ section {
 }
 
 .intro-btn:hover {
-  background-color: #582df4;
-  border: 2px solid #582df4;
+  background-color: #ff0072;
+  border: 2px solid #ff0072;
   color: white;
-  box-shadow: inset 2px 2px 10px black;
+  box-shadow: 0px 0px 25px #ff0072;
 }
