--- a/style/style.css
+++ b/style/style.css
@@ -150,7 +150,7 @@ nav {
   display: flex;
   justify-content: space-between;
   gap: 3rem;
-  padding: 20px 20px;
+  padding: 13px 20px;
 }
 
 .logo {
@@ -327,6 +327,7 @@ section {
   box-shadow: 0px 0px 25px #ff0072;
 }
 
+/* about me */
 section.about-me {
   background: linear-gradient(
     to right top,
@@ -354,7 +355,7 @@ section.about-me {
   transition: 1s;
 }
 
-.about h1 {
+.heading-section {
   margin-bottom: 20px;
   font-size: 64px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -366,4 +367,102 @@ section.about-me {
 
 .about p {
   font-size: 20px;
+}
+
+/* skills */
+
+section.skills {
+  height: fit-content;
+}
+
+section.skills .container {
+  flex-direction: column;
+}
+
+.list-box {
+  display: flex;
+  flex-direction: row;
+}
+
+@keyframes lightUpAndFadeOut {
+  0% {
+    box-shadow: 0px 0px 25px #380019;
+  }
+  25% {
+    box-shadow: 0px 0px 25px #8c003f;
+  }
+  50% {
+    box-shadow: 0px 0px 25px #ff0072;
+  }
+  75% {
+    box-shadow: 0px 0px 25px #8c003f;
+  }
+  100% {
+    box-shadow: 0px 0px 25px #380019;
+  }
+}
+
+.box {
+  border: 5px solid #ff0072;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 12px;
+  animation: lightUpAndFadeOut 8s infinite;
+}
+
+.box-1 {
+  animation-delay: 0s;
+}
+.box-2 {
+  animation-delay: 2s;
+}
+.box-3 {
+  animation-delay: 3s;
+}
+.box-4 {
+  animation-delay: 4s;
+}
+.box-5 {
+  animation-delay: 5s;
+}
+.box-6 {
+  animation-delay: 6s;
+}
+.box-7 {
+  animation-delay: 7s;
+}
+.box-8 {
+  animation-delay: 8s;
+}
+
+.list-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  align-self: stretch;
+  flex-wrap: wrap;
+  gap: 60px;
+  width: 1000px;
+}
+
+.list-box img {
+  width: 120px;
+  /* padding: 20px; */
+}
+
+.skill-box {
+  background-color: #ff0072;
+  /* box-shadow: 0px 0px 25px #ff0072; */
+  text-align: center;
+  color: rgb(247, 228, 228);
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+.skill-box h1 {
+  padding: 10px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 20px;
+  text-shadow: 0px 0px 10px #fff;
 }
