--- a/style/style.css
+++ b/style/style.css
@@ -154,7 +154,7 @@ body {
   height: fit-content;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow-x: auto;
   scroll-behavior: smooth;
 }
 
@@ -240,8 +240,6 @@ button {
 button:hover {
   box-shadow: 0px 0px 25px #170516;
   background-color: #ffffff00;
-  /* border: 1px solid; */
-  /* border-color: #ffffff; */
   color: whitesmoke;
 }
 
@@ -251,12 +249,6 @@ button a:hover {
 }
 
 main {
-  background: linear-gradient(
-    to top right,
-    #170516 30%,
-    #6e0160 70%,
-    #ff0072 100%
-  );
   width: 100%;
   height: max-content;
   margin: 0px;
@@ -268,7 +260,7 @@ main {
   /* overflow: hidden; */
 }
 section {
-  width: auto;
+  width: 100%;
   height: 100vh;
   /* margin: 50px 0px; */
 }
@@ -276,12 +268,17 @@ section {
 .container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
+  /* background-color: white; */
   height: fit-content;
   /* margin: 100px 40px 20px 20px; */
   border-radius: 20px;
   scroll-behavior: smooth;
+}
+
+section.hero {
+  background: linear-gradient(to bottom, #170516 40%, #000758 100%);
 }
 
 .hero {
@@ -291,45 +288,65 @@ section {
 }
 
 .profile {
-  margin: 5px 50px;
+  margin: 0px 20px;
   width: auto;
   height: auto;
+  color: white;
 }
 
-.intro-profile {
-  color: rgb(209, 209, 209);
-  align-items: left;
-}
-
-.intro-profile p {
+.profile p {
   font-size: 32px;
   margin-bottom: 12px;
-  /* position: relative;
-  z-index: 1; */
 }
 
-.intro-profile h1 {
-  font-size: 60px;
-  font-weight: bolder;
+@keyframes fontLightsUp {
+  0% {
+    text-shadow: none;
+  }
+  25% {
+    text-shadow: 0px 0px 25px #000758;
+  }
+  50% {
+    text-shadow: 0px 0px 25px #0015ff;
+  }
+  75% {
+    text-shadow: 0px 0px 25px #000758;
+  }
+  100% {
+    text-shadow: none;
+  }
+}
+
+.profile h1 {
+  font-size: 52px;
+  font-weight: bold;
+  color: #6e015f00;
+  -webkit-text-stroke: 3px #0015ff;
+  text-shadow: 0px 0px 25px #0015ff;
+  animation: fontLightsUp 4s infinite;
+  margin-top: -20px;
+}
+
+.profile a {
+  border: 2px solid #0015ff;
+  padding: 10px;
+  margin-top: 200px;
+  border-radius: 5px;
+}
+
+.profile a:hover {
+  background-color: #0015ff;
+  box-shadow: 0px 0px 25px #0015ff;
   color: white;
-  margin: 12px 0px;
-  text-shadow: 0px 0px 25px #b30051;
-}
-
-.intro-profile h3 {
-  font-size: 48px;
 }
 
 .img-profile {
-  /* width: 360px;
-  height: 400px; */
   overflow: hidden;
-  /* background-color: #01368a; */
   border: 6px solid;
-  border-color: #ff0072;
+  border-color: #0015ff;
   border-radius: 5%;
-  box-shadow: inset 0px 0px 50px #ff0072;
-  /* margin: 50px 50px; */
+  box-shadow: inset 0px 0px 50px #0015ff;
+  margin: 20px 20px;
 }
 
 .img-profile img {
@@ -338,59 +355,33 @@ section {
   object-fit: cover;
 }
 
-.intro-btn {
-  margin-top: 20px;
-  background-color: #ffffff00;
-  border: 2px solid;
-  font-size: 20px;
-}
-
-.intro-btn:hover {
-  background-color: #ff0072;
-  border: 2px solid #ff0072;
-  color: white;
-  box-shadow: 0px 0px 25px #ff0072;
-}
-
 /* about me */
 section.about-me {
-  background: linear-gradient(
-    to right top,
-    #170516 70%,
-    #6e0160 100%,
-    /* #ff0072 100% */
-  );
-  height: 100vh;
+  background: linear-gradient(to bottom, #000758 40%, #0015ff 90%);
+  display: flex;
+  align-items: center;
+  /* height: 100vh; */
 }
+
 .about-me .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-right: 0px;
-  /* margin-top: 20px; */
-}
-
-.about {
-  width: 1000px;
-  height: fit-content;
-  color: white;
+  padding: 20px;
   text-align: center;
-  /* border: 2px solid #fff; */
-  /* margin: 200px; */
-  margin-top: 10%;
-  padding: 50px;
-  transition: 1s;
+  color: white;
 }
 
 .heading-section {
-  margin-top: 60px;
+  margin-top: 0px;
   margin-bottom: 20px;
   font-size: 64px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-weight: bold;
   color: #7d187800;
-  -webkit-text-stroke: 2px #ff0072;
-  text-shadow: 0px 0px 30px #ff0072;
+  -webkit-text-stroke: 2px #0015ff;
+  text-shadow: 0px 0px 30px #0015ff;
 }
 
 .about p {
@@ -398,13 +389,37 @@ section.about-me {
 }
 
 /* skills */
-
 section.skills {
-  height: max-content;
+  background: linear-gradient(to bottom, #0015ff 0%, #000758 20%, #00053b 50%);
+  display: flex;
+  align-items: center;
 }
 
 section.skills .container {
-  padding-bottom: 70px;
+  padding: 20px;
+  width: 100%;
+  /* overflow: hidden; */
+  /* background-color: #8c003f; */
+}
+
+.skill-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 40px;
+}
+
+.skill {
+  border: 5px solid #0015ff;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.skill img {
+  width: 120px;
 }
 
 section.skills .container,
@@ -468,47 +483,18 @@ section.projects .container {
   animation-delay: 8s;
 }
 
-.list-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  align-self: stretch;
-  flex-wrap: wrap;
-  gap: 60px;
-  width: 1000px;
-}
-
-.list-box img {
-  width: 120px;
-  /* padding: 20px; */
-}
-
-.skill-box {
-  background-color: #ff0072;
-  /* box-shadow: 0px 0px 25px #ff0072; */
-  text-align: center;
-  color: rgb(247, 228, 228);
-  margin-top: 20px;
-  border-radius: 5px;
-}
-
-.skill-box h1 {
-  padding: 10px;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 20px;
-  text-shadow: 0px 0px 10px #fff;
-}
-
 /* projects */
 section.projects {
   text-align: center;
-  background: linear-gradient(to right, #170516 20%, #6e015f7e 90%);
+  background: linear-gradient(to bottom, #00053b 20%, #170516 90%);
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
 }
 
 .carousel-container {
   width: 100%;
-  /* overflow: hidden; */
+  /* overflow: hidden;    */
   position: relative;
   display: flex;
   align-items: center;
@@ -536,6 +522,7 @@ section.projects {
 
 .carousel-slide {
   width: 100%;
+  /* height: 70%; */
   /* display: none; */
 }
 
@@ -544,7 +531,7 @@ section.projects {
   box-sizing: border-box;
   padding: 20px;
   text-align: center;
-  box-shadow: inset 0px 0px 1000px #ff0072;
+  box-shadow: inset 0px 0px 1000px #0015ff;
   margin: 12px 60px;
   border-radius: 10px;
   transition: opacity 1s ease-in-out;
@@ -563,7 +550,7 @@ section.projects {
 .projects-box {
   display: flex;
   flex-direction: row;
-  padding: 50px;
+  padding: 20px;
   gap: 3rem;
   color: #fff;
 }
@@ -577,7 +564,7 @@ section.projects {
 }
 
 .project-img img {
-  width: 400px;
+  width: 300px;
   object-fit: cover;
 }
 
@@ -619,7 +606,7 @@ section.projects {
 /* contacts */
 section.contacts {
   width: 100%;
-  background: linear-gradient(to bottom, #170516 70%, #ff0072 110%);
+  background: linear-gradient(to bottom, #170516 70%, #0015ff 110%);
   font-family: "poppins", sans-serif;
 }
 
@@ -666,7 +653,7 @@ section.contacts .heading-section {
 footer {
   padding: 20px;
   text-align: center;
-  background: linear-gradient(to bottom, #c60059, #ff0072);
+  background: linear-gradient(to bottom, #0919cb, #0015ff);
 }
 
 footer a {
