--- a/style/style.css
+++ b/style/style.css
@@ -695,11 +695,12 @@ footer a:hover {
 }
 
 @media screen and (max-width: 576px) {
-  nav button {
+  nav button.hamburger {
     display: block;
     background-color: transparent;
     border: none;
     color: #fff;
+    font-size: 120%;
   }
 
   nav ul {
@@ -722,7 +723,7 @@ footer a:hover {
   }
 
   nav .logo {
-    width: 100%;
+    width: 80%;
   }
 
   .logo img {
@@ -732,10 +733,6 @@ footer a:hover {
   nav {
     justify-content: space-between;
     width: 100%;
-  }
-
-  nav button {
-    font-size: 200%;
   }
 
   section.hero .container {
